HelloUltraviolet/Fixtures/RejectedSource/Parallelism/KeyBlockGpuContext/Source/Main.uv
//! Rejected structured-parallelism specimen for key blocks in GPU contexts.

public procedure keyBlockGpuContextReference(context: Context) -> i32 {
    var shared_value: shared i32 = 1
    return parallel context~>gpu() {
        %read shared_value {
        }
        0
    }
}
